# apps/auth-service/src/routes/auth.router.ts
@@ -1,9 +1,10 @@
 import { Router } from "express";
-import { loginUser, userRegisteration, verifyUser } from "../controller/auth.controller";
+import { loginUser, userForgetPassword, userRegisteration, verifyUser } from "../controller/auth.controller";
 
 const router = Router();
 router.post('/user-registeration', userRegisteration)
 router.post('/verify-user', verifyUser)
 router.post('/login', loginUser)
+router.post('/forget-password', userForgetPassword)
 
 export default router; 
